# cbs-bench

./: .gitignore  Makefile  README.md  analyze_hints.py  cli.py  eval.py  example.json  fetch.py  hello.py  hint_dsl_functions.py  js_snippet.txt  models.py  pyproject.toml  solver.py  syntax.dsl  test_hint_dsl_functions.py
cbs_bench/: __init__.py  cli.py  models.py  prompts.py  solve.py
cbs_bench/generate/: __init__.py  __main__.py  gen.py  hint_dsl_functions.py  validate.py
cbs_bench/prompts/: __init__.py  generate_puzzle.md  solve_puzzle.md
tests/: conftest.py  test_hint_dsl_functions.py  test_solver.py  test_validate.py
utils/: __init__.py  analyze_hints.py
