[project]
name = "logic-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "z3-solver>=4.15.3.0",
    "click>=8.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "json5>=0.12.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.1.0",
    "tiktoken>=0.11.0",
    "langchain-google-genai>=2.1.12",
    "langchain-deepseek>=0.1.4",
    "langchain-xai>=0.2.5",
]

[project.scripts]
logic-solver = "cli:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]
